<resources>
    <string name="app_name">Password Generator</string>
    <string name="generated_password">Generated Password</string>
    <string name="generate_password">Generate Password</string>
    <string name="password_value">DeuFE1?49tw</string>
    <string name="here_for_your_safety">Here for your safety</string>
    <string name="customize_your_password">Customize your password ⚙️</string>
</resources>